--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     font-family: 'Work Sans', sans-serif;
 }
 header{
-    background-image: url(../images/banner/banner1.png);
+    background-image: url(../images/banner/banner.png);
     background-position: center;
     background-size: cover;
     height: 100vh;
@@ -185,4 +185,30 @@ footer{
 input:focus {
     border: 1px solid #FFFFFF;
     outline: none;
+}
+
+/* client section  */
+.client-section{
+    padding: 80px 20px;
+}
+.client-section h1{
+    font-size: 40px;
+    text-align: center;
+    padding: 20px 0;
+}
+.clients{
+    display: flex;
+    justify-content: space-between;
+}
+.client{
+    text-align: center;
+    padding:20px 0;
+}
+.client h3{
+    font-size: 20px;
+    padding-top: 20px;
+}
+.client p{
+    color: #5e5e5e;
+    
 }
